Fix bottombar initial visibility

--- a/sass/sections/_sidebar.scss
+++ b/sass/sections/_sidebar.scss
@@ -216,7 +216,7 @@ span {
   }
 
   .bottombar {
-
+    transform: translateX(-100%);
 
     .topbar-button img,
     .wallet img {
